# crio-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/crio/: __init__.py  cli.py  commit.py  deposit.py  export.py  init.py  list.py  publish.py  source.py  validate.py
src/crio/schema/: model.py
tests/: test_commit.py  test_init.py  test_list.py  test_publish.py  test_validate.py
