[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crio"
version = "0.1.0"
description = "Advocate Health CRIO phenotype library infrastructure"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "click>=8.0",
    "httpx>=0.28",
    "email-validator>=2.0",
]

[project.scripts]
crio = "crio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
